fixed align items

--- a/blockent.css
+++ b/blockent.css
@@ -15,5 +15,6 @@ body, html {
     background-color: rgba(255, 255, 255, 0.85);
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
 
   }
